recursion.cons.ismember.IsMember.scala.error
Erreur de compilation :
IsMember:5: error: not found: value x
      if (l.head==x){return true}
                  ^IsMember:6: error: not found: value x
      else {return isMember(l.tail,x)}
                                   ^